PPC64/s390x:Drop support for Power8 and z13
This CL sets the mcpu/march flags to power9/z14 on native
Linux hosts.

Change-Id: I959e83c51b97ec5105495dca5b22a5ccee66aae5
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7239348
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: John <junyan1@ibm.com>
Commit-Queue: Milad Farazmand <mfarazma@ibm.com>
Cr-Commit-Position: refs/heads/main@{#104195}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1592,8 +1592,8 @@ config("toolchain") {
     defines += [ "V8_TARGET_ARCH_S390X" ]
     if (host_byteorder == "little") {
       defines += [ "V8_TARGET_ARCH_S390X_LE_SIM" ]
-    } else if (current_os != "zos") {
-      cflags += [ "-march=z196" ]
+    } else if (!v8_target_is_simulator && current_os != "zos") {
+      cflags += [ "-march=z14" ]
     }
   }
   if (v8_current_cpu == "ppc64") {
@@ -1608,6 +1608,8 @@ config("toolchain") {
         # Work around AIX assembler popcntb bug.
         "-mno-popcntb",
       ]
+    } else if (!v8_target_is_simulator) {
+      cflags += [ "-mcpu=pwr9" ]
     }
   }
 
