[tsa] Port implementation of ToString builtin to TSA
Drive-by: Land a new syntax for field loads (of TaggedMember<>).
Drive-by: Removed a few NumberConstant uses.

Bug: 348031042
Change-Id: Id7ee02b03c4c3e194d51d2073cf1192ddfd06bef
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7222510
Reviewed-by: Jakob Linke <jgruber@chromium.org>
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Commit-Queue: Nico Hartmann <nicohartmann@chromium.org>
Cr-Commit-Position: refs/heads/main@{#104239}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3831,6 +3831,7 @@ filegroup(
         "src/builtins/builtins-string-gen.cc",
         "src/builtins/builtins-string-gen.h",
         "src/builtins/builtins-string-tsa.cc",
+        "src/builtins/builtins-string-tsa-inl.h",
         "src/builtins/builtins-typed-array-gen.cc",
         "src/builtins/builtins-typed-array-gen.h",
         "src/builtins/builtins-utils-gen.h",
