[sandbox] Cage for ExternalStrings when memory corruption API
When fuzzing/testing with memory_corruption_api enabled, move all
external string resources into a separate cage with a large reserved
guard zone at the end. In testing crash/failure handlers, ignore OOB
reads within this cage.

This allows us to skip such reports from being triaged for this known
issue in the sandbox attacker model.

Bug: 329781444

Change-Id: Ic87df64cad76fbd89f4e1112de548f5fddca1da6
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/7171994
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Auto-Submit: Maksim Ivanov <emaxx@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#104346}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2509,6 +2509,8 @@ filegroup(
         "src/sandbox/code-sandboxing-mode.h",
         "src/sandbox/compactible-external-entity-table-inl.h",
         "src/sandbox/compactible-external-entity-table.h",
+        "src/sandbox/external-strings-cage.cc",
+        "src/sandbox/external-strings-cage.h",
         "src/sandbox/isolate.h",
         "src/sandbox/isolate-inl.h",
         "src/sandbox/indirect-pointer.h",
